Extreme values test cases for GBTRF, GBTRS & removed fla progress test suite.
Removed AOCL FLA Progress test suite as GBTRF, GBTRS are
implemented in main test sutie.

Change-Id: I23b2faab80d93105beab7f1e3c1b69eda8b6a736

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,7 +100,7 @@ option (ENABLE_UPPERCASE "Enable uppercase API's" OFF)
 option (ENABLE_WRAPPER "Enable wrapper code" ON)
 option (INCLUDE_LAPACKE "INCLUDE LAPACKE Code" ON)
 option (BUILD_SHARED_LIBS "Building shared Library" ON)
-option (BUILD_TEST "Building aoclflaprogress and main test directory" OFF)
+option (BUILD_TEST "Building main test directory" OFF)
 option (BUILD_LEGACY_TEST "Building legacy test directory" OFF)
 option (BUILD_NETLIB_TEST "Building test directory" OFF)
 option (ENABLE_NON_CRITICAL_CODE "Enable non-critical" ON)
@@ -1195,7 +1195,6 @@ endif()
 
 if(BUILD_TEST)
 	add_subdirectory(test/main)
-	add_subdirectory(test/aoclflaprogress)
 endif()
 if(BUILD_LEGACY_TEST)
 	add_subdirectory(test/legacyflame)
