--- a/test/example/CMakeLists.txt
+++ b/test/example/CMakeLists.txt
@@ -1,7 +1,7 @@
 ###############################################################################
-# Copyright (C) 2023, Advanced Micro Devices, Inc. All rights reserved.
+# Copyright (C) 2023-2024, Advanced Micro Devices, Inc. All rights reserved.
 ###############################################################################
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.22.0)
 
 project(test_dgetrf)
 
