pkgconfig fix for numpy build system
- Removed quotes on paths in pkg-config template file

Signed-off-by: samahmad <Sameer.Ahmad@amd.com>
AMD-Internal: CPUPL-5624
Change-Id: I724f62b02ea2f52150c0313dc93c10fadf66eb49

--- a/flame.pc.in
+++ b/flame.pc.in
@@ -1,7 +1,7 @@
-prefix="@CMAKE_INSTALL_PREFIX@"
-exec_prefix="${prefix}"
-libdir="${prefix}/lib"
-includedir="${prefix}/include"
+prefix=@CMAKE_INSTALL_PREFIX@
+exec_prefix=${prefix}
+libdir=${prefix}/lib
+includedir=${prefix}/include
 
 Name: @PROJECT_NAME@
 Description: AOCL-LAPACK is a high performant implementation of Linear Algebra PACKage(LAPACK)
