Accurary tests implementation for sygvd/hegvd APIs
Signed-off-by: samahmad <Sameer.Ahmad@amd.com>
AMD-Internal: CPUPL-5556
Change-Id: I774e1a39b12feb6aef65d964704017aea7a45579

--- a/test/main/validate_src/CMakeLists.txt
+++ b/test/main/validate_src/CMakeLists.txt
@@ -43,5 +43,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/validate_gesvdx.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gelsd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_sytrf.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_larf.c
+${CMAKE_CURRENT_SOURCE_DIR}/validate_sygvd.c
 )
 
