AOCL-LAPACK:  Parallelization of Double Precision LU, DGETRF API
  1. Enable Multithreading in DGETRF for input range M and N > 160.
  2. Default and MAX thread count set to 64.
  3. 32 threads gives best bench marking results, so from 160 to 6500 inputrange set to 32.

AMD Internal : [CPUPL-4978]

Change-Id: I7c68982bfe295e95563f40d77547ef101fbd97e2

--- a/src/lapack/dec/lu/piv/front/flamec/CMakeLists.txt
+++ b/src/lapack/dec/lu/piv/front/flamec/CMakeLists.txt
@@ -5,6 +5,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_piv.c
 ${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_piv.h
 ${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_piv_internal.c
 ${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_piv_solve.c
+${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_piv_d.c
 ${CMAKE_CURRENT_SOURCE_DIR}/FLASH_LU_piv.c
 ${CMAKE_CURRENT_SOURCE_DIR}/FLASH_LU_piv_solve.c
 ${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_piv_small_d.c
