--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,7 +173,7 @@ if(WIN32)
 	message(STATUS "No ISA flag set")
 	endif()
 elseif(UNIX)
-	set(COMPILER_OPTIMIZATION_FLAGS	"-mtune=native -O3")
+	set(COMPILER_OPTIMIZATION_FLAGS	"-mtune=native -O3 -fopenmp")
 	if(${lf_isa_config_lower} STREQUAL "avx512")
 		set(COMPILER_OPTIMIZATION_FLAGS	"${COMPILER_OPTIMIZATION_FLAGS} -mavx512f -mavx512dq -mfma")
 	elseif(${lf_isa_config_lower} STREQUAL "avx2" OR ${lf_isa_config_lower} STREQUAL "avx")
