cmake presets support for libFLAME and cmake enhancements
Following features are implemented in this commit:
1. Library path and include path for aocl-utils and blis can be automatically inferred while building libflame if pkg-config files
for these libraries are available. Only works on Linux for now.
2. Various cmake configure/build/install/test/workflow presets.
3. Cmake presets for Windows (msvc and ninja). As of now test presets do not work!
4. Minimum cmake version upgraded to 3.26.0

Preset names follow the convention: <os>-<make/ninja>-<compiler>-<st/mt>-<lp/ilp>-<static/shared>-<isa-mode>-<other optional commands>

Usage:
$ cmake --build --list-presets

-- Without aocl-utils pkgconfig file
$ cmake --preset {chosen-preset} -DLIBAOCLUTILS_INCLUDE_PATH={aoclutils header path} -DLIBAOCLUTILS_LIBRARY_PATH={aoclutils library path}

-- With aocl-utils pkgconfig file
$ cmake --preset {chosen-preset}

$ cmake --build --preset {chosen-preset}

Build and test workflow

-- If aocl-utils and blis pkg-config files are available
$ cmake --workflow --preset {chosen-preset}

More info in BUILD.md

Change-Id: I8bc54b3eabed9a18c305e911df9aa76d8ff746d0
Signed-off-by: samahmad <Sameer.Ahmad@amd.com>
AMD-Internal: CPUPL-5862

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 ##Copyright (C) 2023-2024, Advanced Micro Devices, Inc. All rights reserved.##
 
-cmake_minimum_required(VERSION 3.22.0)
+cmake_minimum_required(VERSION 3.26.0)
 
 # Reading program version from file
 file(STRINGS "so_version" VERSION_DATA)
@@ -92,11 +92,11 @@ endif ()
 #enabling the configuration options
 option (ENABLE_AMD_OPT "Enable AMD optimized path" OFF)
 option (ENABLE_AMD_COMMON_FLAGS "Enable AMD FLAGS internally enables ENABLE_BLAS_EXT_GEMMT, ENABLE_AMD_OPT, ENABLE_BUILTIN_LAPACK2FLAME, ENABLE_EXT_LAPACK_INTERFACE, ENABLE_MULTITHREADING" OFF)
-# hiding this option form cmake gui
+# hiding this option from cmake gui
 mark_as_advanced(ENABLE_AMD_COMMON_FLAGS)
 option (ENABLE_AMD_FLAGS "Enable AMD FLAGS internally enables ENABLE_AMD_COMMON_FLAGS" OFF)
 option (ENABLE_AMD_AOCC_FLAGS "Enable AMD FLAGS internally enables Enable AMD FLAGS internally enables ENABLE_AMD_COMMON_FLAGS, ENABLE_F2C_DOTC, ENABLE_VOID_RETURN_COMPLEX_FUNCTION" OFF)
-# Since AOCC isn't used in windows hiding this option form cmake gui
+# Since AOCC isn't used in windows hiding this option from cmake gui
 if(WIN32)
 	mark_as_advanced(ENABLE_AMD_AOCC_FLAGS)
 endif()
@@ -1032,6 +1032,30 @@ endif ()
 	target_include_directories(${PROJECT_NAME} PUBLIC src/lapack/x86/front)
 	target_include_directories(${PROJECT_NAME} PUBLIC src/lapack/x86/generic)
 
+# IF AOCL-UTILS paths is not provided by user, try to get it with pkg-config
+if (NOT LIBAOCLUTILS_INCLUDE_PATH AND NOT LIBAOCLUTILS_LIBRARY_PATH)
+	find_package(PkgConfig)
+	if (PKG_CONFIG_FOUND)
+		pkg_check_modules(AOCLUTILS aocl-utils)
+		if (AOCLUTILS_FOUND)
+			set(LIBAOCLUTILS_INCLUDE_PATH ${AOCLUTILS_INCLUDE_DIRS})
+			set(LIBAOCLUTILS_LIBRARY_PATH ${AOCLUTILS_LINK_LIBRARIES})
+
+			# If static build is selected, then link with libaoclutils
+			# static library. 
+			if (NOT BUILD_SHARED_LIBS AND NOT WIN32)
+				get_filename_component(LIBAOCLUTILS_LIBRARY_DIR ${LIBAOCLUTILS_LIBRARY_PATH} DIRECTORY)
+				get_filename_component(LIBAOCLUTILS_LIBRARY_NAME ${LIBAOCLUTILS_LIBRARY_PATH} NAME_WE)
+				set(LIBAOCLUTILS_LIBRARY_PATH ${LIBAOCLUTILS_LIBRARY_DIR}/${LIBAOCLUTILS_LIBRARY_NAME}.a)
+			endif()
+
+			message(STATUS "Found AOCL-UTILS include path using pkg-config: " ${LIBAOCLUTILS_INCLUDE_PATH})
+			message(STATUS "Found AOCL-UTILS library path using pkg-config: " ${LIBAOCLUTILS_LIBRARY_PATH})
+
+		endif()
+	endif()
+endif()
+
 #If embedding AOCL-UTILS library in AOCL-LAPACK option is selected
 if(ENABLE_EMBED_AOCLUTILS)
   #AOCLUtils library path handling
@@ -1152,19 +1176,69 @@ link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 add_definitions(-DEXPMODULE)
 add_subdirectory(src)
 
+if (BUILD_TEST OR BUILD_LEGACY_TEST OR BUILD_NETLIB_TEST)
+	if(NOT CMAKE_EXT_BLAS_LIBRARY_DEPENDENCY_PATH OR NOT EXT_BLAS_LIBNAME)
+		# Get the path of directory using pkg-config
+		find_package(PkgConfig)
+		if (PKG_CONFIG_FOUND)
+			pkg_check_modules(BLIS blis)
+			if (BLIS_FOUND)
+				if (NOT BLAS_HEADER_PATH)
+					set(BLAS_HEADER_PATH ${BLIS_INCLUDE_DIRS})
+				endif()
+				message(STATUS "Found BLAS library path using pkg-config : " ${BLIS_LINK_LIBRARIES})
+			endif()
+		endif()
+		if (NOT BLIS_FOUND)
+			message(FATAL_ERROR "BLAS library path not set! Please set the same using CMAKE_EXT_BLAS_LIBRARY_DEPENDENCY_PATH \
+			option or make sure blis pkg-config file is in PKG_CONFIG_PATH")
+		endif()
+	endif()
+
+	# if user wants to run tests on an external lapack library
+	# needs to be modified for external lapack libraries same way as done for blas
+	if((NOT EXT_LAPACK_LIBRARY_PATH) OR (NOT EXT_LAPACK_LIBNAME))
+
+		if (UNIX)
+			if (BUILD_SHARED_LIBS)
+				set(LIBFLAME_LIB_NAME lib${PROJECT_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
+				set(LIBFLAME_LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+			else()
+				set(LIBFLAME_LIB_NAME lib${PROJECT_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX})
+				set(LIBFLAME_LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+			endif()
+		else ()
+			if (BUILD_SHARED_LIBS)
+				set(LIBFLAME_LIB_NAME ${TEMP_VAR}${CMAKE_SHARED_LIBRARY_SUFFIX})
+				set(LIBFLAME_LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/$<CONFIG>/})
+			else()
+				set(LIBFLAME_LIB_NAME ${TEMP_VAR}${CMAKE_STATIC_LIBRARY_SUFFIX})
+				set(LIBFLAME_LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/$<CONFIG>/)
+			endif()
+		endif()
+
+		set(EXT_LAPACK_LIBRARY_PATH ${LIBFLAME_LIBRARY_OUTPUT_PATH})
+		set(EXT_LAPACK_LIBNAME ${LIBFLAME_LIB_NAME})
+		message(STATUS "Missing External lapack library. Using ${LIBFLAME_LIBRARY_OUTPUT_PATH}/${LIBFLAME_LIB_NAME} ")
+	elseif(NOT EXISTS ${EXT_LAPACK_LIBRARY_PATH}/${EXT_LAPACK_LIBNAME})
+		message(FATAL_ERROR "\n Invalid path to lapack Library \n \
+	${EXT_LAPACK_LIBRARY_PATH}/${EXT_LAPACK_LIBNAME} \
+	Does not exist.\n Please check the path again, or avoid passing \n \
+	-DEXT_LAPACK_LIBRARY_PATH and -DEXT_LAPACK_LIBNAME to use libflame")
+	endif()
+
+endif()
+
 if (BUILD_TEST OR BUILD_LEGACY_TEST)
 	# enable ctest
 	enable_testing()
 	message(STATUS "CTEST ENABLED")
 
-	if(NOT CMAKE_EXT_BLAS_LIBRARY_DEPENDENCY_PATH OR NOT EXT_BLAS_LIBNAME)
-		message(FATAL_ERROR "Please set path and name of BLAS library using CMAKE_EXT_BLAS_LIBRARY_DEPENDENCY_PATH and EXT_BLAS_LIBNAME options respectively.")
-	endif()
-
 	add_library(blas SHARED IMPORTED)
 	add_library(aoclutils SHARED IMPORTED)
 	if(NOT ENABLE_EMBED_AOCLUTILS AND NOT EXISTS ${LIBAOCLUTILS_LIBRARY_PATH})
-		message(FATAL_ERROR "aocl-utils library path not set! Please set the same using LIBAOCLUTILS_LIBRARY_PATH option")
+		message(FATAL_ERROR "aocl-utils library path not set! Please set the same using LIBAOCLUTILS_LIBRARY_PATH \
+		option or make sure aocl-utils pkg-config file is in PKG_CONFIG_PATH")
 	endif()
 
 	if(UNIX)
@@ -1185,6 +1259,11 @@ if (BUILD_TEST OR BUILD_LEGACY_TEST)
 		foreach(BLAS_LIB ${BLAS_LIB_LIST})
 			list(APPEND BLAS_LINK_LIST ${CMAKE_EXT_BLAS_LIBRARY_DEPENDENCY_PATH}/${BLAS_LIB})
 		endforeach()
+
+		if(NOT BLAS_LINK_LIST AND BLIS_LINK_LIBRARIES)
+			list(APPEND BLAS_LINK_LIST ${BLIS_LINK_LIBRARIES})
+		endif()
+
 		set_target_properties(aoclutils PROPERTIES
 		IMPORTED_LOCATION ${LIBAOCLUTILS_LIBRARY_PATH}
 		POSITION_INDEPENDENT_CODE ON
@@ -1206,18 +1285,6 @@ if (BUILD_TEST OR BUILD_LEGACY_TEST)
 		POSITION_INDEPENDENT_CODE ON
 		)
 	endif()
-
-	# if user wants to run tests on an external lapack library
-	# needs to be modified for external lapack libraries same way as done for blas
-	if((NOT EXT_LAPACK_LIBRARY_PATH) OR (NOT EXT_LAPACK_LIBNAME))
-		set(EXT_LAPACK_LIBRARY_PATH "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
-		message(STATUS "Missing External lapack library. Using ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${EXT_LAPACK_LIBNAME} ")
-	elseif(NOT EXISTS ${EXT_LAPACK_LIBRARY_PATH}/${EXT_LAPACK_LIBNAME})
-		message(FATAL_ERROR "\n Invalid path to lapack Library \n \
-	${EXT_LAPACK_LIBRARY_PATH}/${EXT_LAPACK_LIBNAME} \
-	Does not exist.\n Please check the path again, or avoid passing \n \
-	-DEXT_LAPACK_LIBRARY_PATH and -DEXT_LAPACK_LIBNAME to use libflame")
-	endif()
 	#add_subdirectory(testcpp)
 endif()
 
@@ -1229,6 +1296,22 @@ if(BUILD_LEGACY_TEST)
 endif()
 
 if (BUILD_NETLIB_TEST)
+
+	if (BUILD_SHARED_LIBS)
+		message(FATAL_ERROR "Netlib test is not supported for shared library build")
+	endif()
+
+	if ((NOT (CMAKE_EXT_BLAS_LIBRARY_DEPENDENCY_PATH) OR NOT (EXT_BLAS_LIBNAME)) AND BLIS_LINK_LIBRARIES)
+		get_filename_component(BLAS_LIB_PATH ${BLIS_LINK_LIBRARIES} DIRECTORY)
+		get_filename_component(BLAS_LIB_NAME_WE ${BLIS_LINK_LIBRARIES} NAME_WE)
+		if(NOT EXISTS ${BLAS_LIB_PATH}/${BLAS_LIB_NAME_WE}${CMAKE_STATIC_LIBRARY_SUFFIX})
+			message(FATAL_ERROR "Need static BLAS library to build netlib test. Please provide the path to the static BLAS library using
+			\nEXT_BLAS_LIBNAME and CMAKE_EXT_BLAS_LIBRARY_DEPENDENCY_PATH")
+		endif()
+		set(EXT_BLAS_LIBNAME ${BLAS_LIB_NAME_WE}${CMAKE_STATIC_LIBRARY_SUFFIX})
+		set(CMAKE_EXT_BLAS_LIBRARY_DEPENDENCY_PATH ${BLAS_LIB_PATH})
+	endif()
+
 	if(WIN32)
 		add_subdirectory(netlib-test)
 	else()
