Updated configure file to include -fopenmp in compiler flag only when multi-thread is enabled
CPUPL-5677
Signed-off-by: Sridhar Govindaswamy <Sridhar.Govindaswamy@amd.com>
Change-Id: Iaa1b79ca8e7e7c15df31b02e7fef450eb530a4e7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,13 +173,16 @@ if(WIN32)
 	message(STATUS "No ISA flag set")
 	endif()
 elseif(UNIX)
-	set(COMPILER_OPTIMIZATION_FLAGS	"-mtune=native -O3 -fopenmp")
+	set(COMPILER_OPTIMIZATION_FLAGS	"-mtune=native -O3")
 	if(${lf_isa_config_lower} STREQUAL "avx512")
 		set(COMPILER_OPTIMIZATION_FLAGS	"${COMPILER_OPTIMIZATION_FLAGS} -mavx512f -mavx512dq -mfma")
 	elseif(${lf_isa_config_lower} STREQUAL "avx2" OR ${lf_isa_config_lower} STREQUAL "avx")
 		set(COMPILER_OPTIMIZATION_FLAGS	"${COMPILER_OPTIMIZATION_FLAGS} -mavx2 -mfma")
 	else()
 		message(STATUS "No ISA flag set")
+	endif()
+	if(ENABLE_MULTITHREADING)
+		set(COMPILER_OPTIMIZATION_FLAGS	"${COMPILER_OPTIMIZATION_FLAGS} -fopenmp")
 	endif()
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COMPILER_OPTIMIZATION_FLAGS}")
 else()
