Native implementation of sgelsd and dgelsd
Earlier these APIs were just a wrapper around sgelss/dgelss.
gelsd APIs provide significant performance gains over gelss
APIs.

Signed-off-by: samahmad <Sameer.Ahmad@amd.com>
AMD-Internal: CPUPL-5766
Change-Id: I867c107816fcd50fb16a890ca5947c6b9ff80e3d

--- a/src/map/lapack2flamec/f2c/c/CMakeLists.txt
+++ b/src/map/lapack2flamec/f2c/c/CMakeLists.txt
@@ -537,6 +537,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/dgelqt.c
 ${CMAKE_CURRENT_SOURCE_DIR}/dgelqt3.c
 ${CMAKE_CURRENT_SOURCE_DIR}/dgels.c
 ${CMAKE_CURRENT_SOURCE_DIR}/dgelss.c
+${CMAKE_CURRENT_SOURCE_DIR}/dgelsd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/dgelsx.c
 ${CMAKE_CURRENT_SOURCE_DIR}/dgelsy.c
 ${CMAKE_CURRENT_SOURCE_DIR}/dgemlq.c
@@ -1027,6 +1028,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/sgelqt.c
 ${CMAKE_CURRENT_SOURCE_DIR}/sgelqt3.c
 ${CMAKE_CURRENT_SOURCE_DIR}/sgels.c
 ${CMAKE_CURRENT_SOURCE_DIR}/sgelss.c
+${CMAKE_CURRENT_SOURCE_DIR}/sgelsd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/sgelsx.c
 ${CMAKE_CURRENT_SOURCE_DIR}/sgelsy.c
 ${CMAKE_CURRENT_SOURCE_DIR}/sgemlq.c
