CPP interface changes in main test suite.
a. Added separate invoke functions in CPP for each API
b. Added support for cmake and make
c. Added support for --interface in cmd line
d. Resolved warnings in existing interface header file
e. Resolved errors/warnings in Windows
f. Added ENABLE_CPP_TEST flag in cmake, make files to enable/disable CPP test interface.
g. Updated Readme as per latest changes.
h. Added CPP changes for 25+ test APIs.

Change-Id: I6b77d24e204833134401c69813a3a1672de02c18

--- a/test/main/Makefile
+++ b/test/main/Makefile
@@ -1,17 +1,22 @@
 ###############################################################################
-# Copyright (C) 2022-2023, Advanced Micro Devices, Inc. All rights reserved.
+# Copyright (C) 2022-2024, Advanced Micro Devices, Inc. All rights reserved.
 ###############################################################################
 # 
 # Makefile for libflame test suite driver.
 #
 
 CC             := gcc
-LINKER         := $(CC)
+CLINKER        := $(CC)
 RM_RF          := rm -rf
 OMP_LIB        := -fopenmp
-CPPFLAGS       :=
 CFLAGS         := -std=c11 -D_GNU_SOURCE -O2 -Wall -Wno-unused-function -Wno-comment ${OMP_LIB}
+CXXFLAGS       :=
 LDFLAGS        := -lstdc++ -lm -lpthread $(OMP_LIB)
+
+ifndef $(ENABLE_CPP_TEST)
+# Flag to enable CPP test
+ENABLE_CPP_TEST := 0
+endif
 
 #
 # --- LIBFLAME \ LAPACK library ------------------------------------------------
@@ -30,7 +35,7 @@ BLAS_HEADER_PATH  :=
 #
 # ----- AOCL-Utils library path
 #
-LIBAOCLUTILS_LIBRARY_PATH := 
+LIBAOCLUTILS_LIBRARY_PATH :=
 
 #
 # --- Uncomment the four lines below and set MKLROOT & LDFLAGS -----------------
@@ -48,7 +53,10 @@ LIBAOCLUTILS_LIBRARY_PATH :=
 # --- ILP64 --- Set to 1 to enable ILP64 ---------------------------------------
 #
 ifeq ($(ILP64),1)
-	CPPFLAGS   += -DFLA_ENABLE_ILP64=1
+ifeq ($(ENABLE_CPP_TEST), 1)
+    CXXFLAGS    += -DFLA_ENABLE_ILP64=1
+endif
+    CFLAGS      += -DFLA_ENABLE_ILP64=1
 endif
 
 #
@@ -65,26 +73,38 @@ API_CALLING_CONVENTION := default
 # -- API_CALLING_CONVENTION set to "upper" enables uppercase w/o underscore ----
 #
 ifeq ($(API_CALLING_CONVENTION),upper)
-    CPPFLAGS   += -DUPPER=1
+ifeq ($(ENABLE_CPP_TEST), 1)
+    CXXFLAGS    += -DUPPER=1
+endif
+    CFLAGS      += -DUPPER=1
 endif
 
 #
 # -- API_CALLING_CONVENTION set to "upper_" enables uppercase w/ underscore ----
 #
 ifeq ($(API_CALLING_CONVENTION),upper_)
-    CPPFLAGS   += -DUPPER_=1
+ifeq ($(ENABLE_CPP_TEST), 1)
+    CXXFLAGS    += -DUPPER_=1
+endif
+    CFLAGS      += -DUPPER_=1
 endif
 
 #
 # -- API_CALLING_CONVENTION set to "lower" enables lowercase w/o underscore ----
 #
 ifeq ($(API_CALLING_CONVENTION),lower)
-    CPPFLAGS   += -DLOWER=1
+ifeq ($(ENABLE_CPP_TEST), 1)
+    CXXFLAGS    += -DLOWER=1
+endif
+    CFLAGS      += -DLOWER=1
 endif
 
 # --- enable dynamic memory  unaligned  addres logic --------------------------
 ifeq ($(MEM_UNALN),1)
-	CPPFLAGS   += -DFLA_MEM_UNALIGNED=1
+ifeq ($(ENABLE_CPP_TEST), 1)
+	CXXFLAGS   += -DFLA_MEM_UNALIGNED=1
+endif
+    CFLAGS     += -DFLA_MEM_UNALIGNED=1
 endif
 #
 # --- General build definitions ------------------------------------------------
@@ -94,31 +114,60 @@ TEST_OBJ_PATH  := src/obj
 TEST_VALIDATE_SRC_PATH := validate_src
 TEST_VALIDATE_OBJ_PATH := validate_src/obj
 
+ifeq ($(ENABLE_CPP_TEST), 1)
+CXX                 := g++
+CXXFLAGS            += -std=c++17 -Wall ${OMP_LIB}
+TEST_CPP_PATH       := src/cpp
+TEST_CPP_OBJ_PATH   := src/obj/cpp
+SRC_CPP_PATH        := ../../src/src_cpp
+
+CFLAGS         += -DENABLE_CPP_TEST=1 -I$(BLAS_HEADER_PATH) -I$(LAPACK_INC_PATH) -I$(TEST_SRC_PATH) -I$(TEST_VALIDATE_SRC_PATH) -I$(TEST_CPP_PATH) -I$(SRC_CPP_PATH)
+CXXFLAGS       += -DENABLE_CPP_TEST=1 -I$(BLAS_HEADER_PATH) -I$(LAPACK_INC_PATH) -I$(TEST_SRC_PATH) -I$(TEST_VALIDATE_SRC_PATH) -I$(TEST_CPP_PATH) -I$(SRC_CPP_PATH)
+
+else
 CFLAGS         += -I$(BLAS_HEADER_PATH) -I$(LAPACK_INC_PATH) -I$(TEST_SRC_PATH) -I$(TEST_VALIDATE_SRC_PATH)
+endif
 
 FNAME          := lapack
 
-TEST_VALIDATE_OBJS := $(patsubst $(TEST_VALIDATE_SRC_PATH)/%.c, \
-                             $(TEST_VALIDATE_OBJ_PATH)/%.o, \
-                             $(wildcard $(TEST_VALIDATE_SRC_PATH)/*.c))
+TEST_VALIDATE_OBJS  := $(patsubst $(TEST_VALIDATE_SRC_PATH)/%.c, \
+                       $(TEST_VALIDATE_OBJ_PATH)/%.o, \
+                       $(wildcard $(TEST_VALIDATE_SRC_PATH)/*.c))
 
-TEST_OBJS      := $(patsubst $(TEST_SRC_PATH)/%.c, \
-                             $(TEST_OBJ_PATH)/%.o, \
-                             $(wildcard $(TEST_SRC_PATH)/*.c))
+ifeq ($(ENABLE_CPP_TEST), 1)
+TEST_CPP_OBJS       := $(patsubst $(TEST_CPP_PATH)/%.cc, \
+                       $(TEST_CPP_OBJ_PATH)/%.o, \
+                       $(wildcard $(TEST_CPP_PATH)/*.cc))
+endif
+TEST_SRC_OBJS       := $(patsubst $(TEST_SRC_PATH)/%.c, \
+                       $(TEST_OBJ_PATH)/%.o, \
+                       $(wildcard $(TEST_SRC_PATH)/*.c))
 
 TEST_BIN       := test_$(FNAME).x
 
 $(TEST_VALIDATE_OBJ_PATH)/%.o: $(TEST_VALIDATE_SRC_PATH)/%.c
 	mkdir -p $(TEST_VALIDATE_OBJ_PATH)
-	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
+
+ifeq ($(ENABLE_CPP_TEST), 1)
+$(TEST_CPP_OBJ_PATH)/%.o: $(TEST_CPP_PATH)/%.cc
+	mkdir -p $(TEST_CPP_OBJ_PATH)
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+endif
 
 $(TEST_OBJ_PATH)/%.o: $(TEST_SRC_PATH)/%.c
 	mkdir -p $(TEST_OBJ_PATH)
-	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
-test_$(FNAME): $(TEST_VALIDATE_OBJS) $(TEST_OBJS)
-	$(LINKER) $(TEST_VALIDATE_OBJS) $(TEST_OBJS) $(LIBFLAME) $(LIBBLAS) $(LIBAOCLUTILS_LIBRARY_PATH) \
+ifeq ($(ENABLE_CPP_TEST), 1)
+test_$(FNAME): $(TEST_VALIDATE_OBJS) $(TEST_CPP_OBJS) $(TEST_SRC_OBJS)
+	$(CLINKER) $(TEST_VALIDATE_OBJS) $(TEST_CPP_OBJS) $(TEST_SRC_OBJS) $(LIBFLAME) $(LIBBLAS) $(LIBAOCLUTILS_LIBRARY_PATH) \
 	$(LDFLAGS) -o $(TEST_BIN)
+else
+test_$(FNAME): $(TEST_VALIDATE_OBJS) $(TEST_SRC_OBJS)
+	$(CLINKER) $(TEST_VALIDATE_OBJS) $(TEST_SRC_OBJS) $(LIBFLAME) $(LIBBLAS) $(LIBAOCLUTILS_LIBRARY_PATH) \
+	$(LDFLAGS) -o $(TEST_BIN)
+endif
 
 clean:
 	$(RM_RF) $(TEST_VALIDATE_OBJ_PATH) $(TEST_OBJ_PATH) $(TEST_BIN)
