AOCL-LAPACK Test-Suite: Add sytrf_rook test case
Signed-off-by: Vibhav Gupta <Vibhav.Gupta@amd.com>
AMD-Internal: CPUPL-6155

Change-Id: Icbd84fdfa434875bf3bfd2072b09d8e77c326702

--- a/test/main/src/CMakeLists.txt
+++ b/test/main/src/CMakeLists.txt
@@ -51,6 +51,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/test_routines.h
 ${CMAKE_CURRENT_SOURCE_DIR}/test_gelss.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_sytrf.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_hetrf_rook.c
+${CMAKE_CURRENT_SOURCE_DIR}/test_sytrf_rook.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_larf.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_sygvd.c)
 
