AOCL-LAPACK Test Suite: hetrf and hetri_rook test case addition
Added test case for HETRF and HETRI_ROOk
Fixed warnings in FLA_gesdd.c file

Signed-off-by: Vibhav Gupta <Vibhav.Gupta@amd.com>
AMD-Internal: CPUPL-6193

Change-Id: If5f1c2303c65c05108689a2cf0eea725ada28ad4

--- a/test/main/src/CMakeLists.txt
+++ b/test/main/src/CMakeLists.txt
@@ -52,12 +52,14 @@ ${CMAKE_CURRENT_SOURCE_DIR}/test_gelss.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_sytrf.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_hetrf_rook.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_sytrf_rook.c
+${CMAKE_CURRENT_SOURCE_DIR}/test_hetrf.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_larf.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_sygvd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_lange.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_gecon.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_getrfnp.c
-${CMAKE_CURRENT_SOURCE_DIR}/test_getrfnpi.c)
+${CMAKE_CURRENT_SOURCE_DIR}/test_getrfnpi.c
+${CMAKE_CURRENT_SOURCE_DIR}/test_hetri_rook.c)
 
 if(ENABLE_CPP_TEST)
 add_subdirectory(cpp)
