--- a/src/lapack/x86/avx2/CMakeLists.txt
+++ b/src/lapack/x86/avx2/CMakeLists.txt
@@ -1,4 +1,4 @@
-##Copyright (C) 2023-2024, Advanced Micro Devices, Inc. All rights reserved.## 
+##Copyright (C) 2023-2025, Advanced Micro Devices, Inc. All rights reserved.## 
 add_library(FLA_LAPACK_AVX2
      OBJECT
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_lapack_avx2_kernels.h
@@ -25,6 +25,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/fla_dlange_kernels_avx2.c
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_dlarf_kernels_avx2.c
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_sgetrf_small_avx2.c
 ${CMAKE_CURRENT_SOURCE_DIR}/fla_lu_piv_small_s_update_tr_matrix_avx2.c
+${CMAKE_CURRENT_SOURCE_DIR}/fla_dnrm2_blas_avx2.c
 )
 
 if(WIN32)
