AOCL-LAPACK: Upgrade to LAPACK - 3.12 Part 2 - Double Precision Complex New files
Port Netlib Lapack-3.12 newly added double precision complex fortran files to c
Files added : zgedmd.c, zgedmdq.c, zgeqp3rk.c, zlaqp2rk.c, zlaqp3rk.c, zrscl.c.
Updating DTL logging in dgedmd.c, dgedmdq.c, dgeqp3rk.c, dlaqp2rk.c, dlaqp3rk.c

Signed-off-by: Venkatesha <vprasada@amd.com>
AMD-Internal: [CPUPL-6150]
Change-Id: Ia043bdeace2efc61fb25c64e47c2a45bdd8bda9c

--- a/src/map/lapack2flamec/f2c/c/CMakeLists.txt
+++ b/src/map/lapack2flamec/f2c/c/CMakeLists.txt
@@ -1964,4 +1964,9 @@ ${CMAKE_CURRENT_SOURCE_DIR}/zupmtr.c
 ${CMAKE_CURRENT_SOURCE_DIR}/zgelst.c
 ${CMAKE_CURRENT_SOURCE_DIR}/zlatrs3.c
 ${CMAKE_CURRENT_SOURCE_DIR}/ztrsyl3.c
-	)
+${CMAKE_CURRENT_SOURCE_DIR}/zgedmd.c
+${CMAKE_CURRENT_SOURCE_DIR}/zgedmdq.c
+${CMAKE_CURRENT_SOURCE_DIR}/zgeqp3rk.c
+${CMAKE_CURRENT_SOURCE_DIR}/zlaqp2rk.c
+${CMAKE_CURRENT_SOURCE_DIR}/zlaqp3rk.c
+${CMAKE_CURRENT_SOURCE_DIR}/zrscl.c)
