AOCL-LAPACK : Test Suite - Addition of test case for GECON
Added test code and validation for GECON APIs

Signed-off-by: Venkatesha <vprasada@amd.com>
AMD-Internal: [CPUPL-6203]
Change-Id: Idc9f13805380836351a232d9ad2f8d5feb2c36f8

--- a/test/main/src/CMakeLists.txt
+++ b/test/main/src/CMakeLists.txt
@@ -54,7 +54,8 @@ ${CMAKE_CURRENT_SOURCE_DIR}/test_hetrf_rook.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_sytrf_rook.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_larf.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_sygvd.c
-${CMAKE_CURRENT_SOURCE_DIR}/test_lange.c)
+${CMAKE_CURRENT_SOURCE_DIR}/test_lange.c
+${CMAKE_CURRENT_SOURCE_DIR}/test_gecon.c)
 
 if(ENABLE_CPP_TEST)
 add_subdirectory(cpp)
