--- a/test/main/src/cpp/CMakeLists.txt
+++ b/test/main/src/cpp/CMakeLists.txt
@@ -49,5 +49,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/invoke_potrf.cc
 ${CMAKE_CURRENT_SOURCE_DIR}/invoke_potrs.cc
 ${CMAKE_CURRENT_SOURCE_DIR}/invoke_rot.cc
 ${CMAKE_CURRENT_SOURCE_DIR}/invoke_stedc.cc
+${CMAKE_CURRENT_SOURCE_DIR}/invoke_gecon.cc
 ${CMAKE_CURRENT_SOURCE_DIR}/invoke_common.hh
 )
