--- a/test/main/validate_src/CMakeLists.txt
+++ b/test/main/validate_src/CMakeLists.txt
@@ -46,5 +46,5 @@ ${CMAKE_CURRENT_SOURCE_DIR}/validate_hetrf_rook.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_larf.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_sygvd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_lange.c
+${CMAKE_CURRENT_SOURCE_DIR}/validate_gecon.c
 )
-
